src/output/snapshots/may_i__output__check__tests__check_output_all_passed_summary_only.snap
---
source: src/output/check.rs
expression: "render_check_output(&views, false)"
---

Summary

  ✓ 1 passed, 0 failed

  config: /tmp/test-config.lisp
