src/output/snapshots/may_i__output__check__tests__check_output_verbose_lists_every_result.snap
---
source: src/output/check.rs
expression: "render_check_output(&views, true)"
---
  PASS echo hi → allow
  PASS rm -rf / → deny

Summary

  ✓ 2 passed, 0 failed

  config: /tmp/test-config.lisp
